--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Morency Supply - Your trusted partner for dental consumables and supplies">
-    <title>Morency Supply - Dental Consumables Management</title>
+    <meta name="description" content="Morency Supply manages essential dental consumables on a recurring route so your staff never reorders, tracks inventory, or runs out mid-patient.">
+    <title>Morency Supply - Dental Consumables, Fully Managed</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -13,7 +13,7 @@
         <div class="container">
             <div class="nav-wrapper">
                 <div class="logo">
-                    <h1>Morency Supply</h1>
+                    <a href="index.html"><h1>Morency Supply</h1></a>
                 </div>
                 <button class="mobile-menu-toggle" id="mobileMenuToggle" aria-label="Toggle menu">
                     <span></span>
@@ -21,213 +21,126 @@
                     <span></span>
                 </button>
                 <ul class="nav-menu" id="navMenu">
-                    <li><a href="#home" class="nav-link">Home</a></li>
-                    <li><a href="#services" class="nav-link">Services</a></li>
-                    <li><a href="#about" class="nav-link">About</a></li>
-                    <li><a href="#products" class="nav-link">Products</a></li>
-                    <li><a href="#contact" class="nav-link">Contact</a></li>
+                    <li><a href="index.html" class="nav-link">Home</a></li>
+                    <li><a href="services.html" class="nav-link">Services</a></li>
+                    <li><a href="pricing.html" class="nav-link">Pricing</a></li>
+                    <li><a href="why.html" class="nav-link">Why Morency</a></li>
+                    <li><a href="faqs.html" class="nav-link">FAQs</a></li>
+                    <li><a href="about.html" class="nav-link">About</a></li>
+                    <li><a href="contact.html" class="nav-link btn-nav-cta">Schedule Walkthrough</a></li>
                 </ul>
             </div>
         </div>
     </nav>
 
     <!-- Hero Section -->
-    <section id="home" class="hero">
-        <div class="hero-overlay"></div>
+    <section class="hero">
         <div class="container">
             <div class="hero-content">
-                <h1 class="hero-title">Streamline Your Dental Practice Supply Chain</h1>
-                <p class="hero-subtitle">Professional consumables management for modern dental practices</p>
+                <h1 class="hero-title">Dental consumables, fully managed.</h1>
+                <p class="hero-subtitle">Morency Supply manages essential dental consumables on a recurring route so your staff never reorders, tracks inventory, or runs out mid-patient.</p>
                 <div class="hero-buttons">
-                    <a href="#contact" class="btn btn-primary">Get Started</a>
-                    <a href="#services" class="btn btn-secondary">Learn More</a>
-                </div>
-            </div>
-        </div>
-        <div class="scroll-indicator">
-            <span></span>
-        </div>
-    </section>
-
-    <!-- Services Section -->
-    <section id="services" class="services">
-        <div class="container">
-            <div class="section-header">
-                <h2>Our Services</h2>
-                <p>Comprehensive supply management solutions tailored for dental practices</p>
-            </div>
-            <div class="services-grid">
-                <div class="service-card">
-                    <div class="service-icon">📦</div>
-                    <h3>Inventory Management</h3>
-                    <p>Automated tracking and reordering of dental consumables to ensure you never run out of essential supplies.</p>
-                </div>
-                <div class="service-card">
-                    <div class="service-icon">🚚</div>
-                    <h3>Reliable Delivery</h3>
-                    <p>Scheduled deliveries that fit your practice schedule, ensuring timely arrival of all your supplies.</p>
-                </div>
-                <div class="service-card">
-                    <div class="service-icon">💰</div>
-                    <h3>Cost Optimization</h3>
-                    <p>Strategic purchasing and bulk ordering to reduce costs while maintaining quality standards.</p>
-                </div>
-                <div class="service-card">
-                    <div class="service-icon">📊</div>
-                    <h3>Usage Analytics</h3>
-                    <p>Detailed reports and insights on consumption patterns to optimize your inventory levels.</p>
-                </div>
-                <div class="service-card">
-                    <div class="service-icon">✅</div>
-                    <h3>Quality Assurance</h3>
-                    <p>All products meet strict dental industry standards and regulations for safety and efficacy.</p>
-                </div>
-                <div class="service-card">
-                    <div class="service-icon">🎯</div>
-                    <h3>Custom Solutions</h3>
-                    <p>Personalized service plans designed to meet the unique needs of your dental practice.</p>
+                    <a href="contact.html" class="btn btn-primary">Schedule a 10-Minute Walkthrough</a>
+                    <a href="#how-it-works" class="btn btn-secondary">See How It Works</a>
                 </div>
             </div>
         </div>
     </section>
 
-    <!-- About Section -->
-    <section id="about" class="about">
+    <!-- Core Value Blocks -->
+    <section class="value-blocks">
         <div class="container">
-            <div class="about-content">
-                <div class="about-text">
-                    <h2>About Morency Supply</h2>
-                    <p>With years of experience in the dental industry, Morency Supply has established itself as a trusted partner for dental practices across the region. We understand the critical importance of having the right supplies at the right time.</p>
-                    <p>Our team of experts works closely with dental professionals to ensure seamless supply chain management, allowing you to focus on what matters most – providing exceptional patient care.</p>
-                    <div class="stats">
-                        <div class="stat-item">
-                            <div class="stat-number">500+</div>
-                            <div class="stat-label">Dental Practices Served</div>
-                        </div>
-                        <div class="stat-item">
-                            <div class="stat-number">10K+</div>
-                            <div class="stat-label">Products Available</div>
-                        </div>
-                        <div class="stat-item">
-                            <div class="stat-number">99%</div>
-                            <div class="stat-label">Customer Satisfaction</div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section>
-
-    <!-- Products Section -->
-    <section id="products" class="products">
-        <div class="container">
-            <div class="section-header">
-                <h2>Product Categories</h2>
-                <p>Comprehensive range of dental consumables for every need</p>
-            </div>
-            <div class="products-grid">
-                <div class="product-category">
-                    <h3>Infection Control</h3>
+            <div class="value-grid">
+                <div class="value-block">
+                    <h3>Zero Reordering</h3>
                     <ul>
-                        <li>Disinfectants & Sterilants</li>
-                        <li>Barrier Protection</li>
-                        <li>Surface Wipes</li>
-                        <li>Hand Sanitizers</li>
+                        <li>Your team never places another supply order</li>
+                        <li>No tracking</li>
+                        <li>No spreadsheets</li>
+                        <li>No emergency shortages</li>
                     </ul>
                 </div>
-                <div class="product-category">
-                    <h3>Restorative Materials</h3>
+                <div class="value-block">
+                    <h3>Never Run Out</h3>
                     <ul>
-                        <li>Composite Resins</li>
-                        <li>Bonding Agents</li>
-                        <li>Cements & Liners</li>
-                        <li>Impression Materials</li>
+                        <li>Par levels set once</li>
+                        <li>Restocked weekly or bi-weekly</li>
+                        <li>Emergency top-offs included</li>
                     </ul>
                 </div>
-                <div class="product-category">
-                    <h3>Disposables</h3>
+                <div class="value-block">
+                    <h3>One Monthly Invoice</h3>
                     <ul>
-                        <li>Gloves & Masks</li>
-                        <li>Bibs & Barriers</li>
-                        <li>Syringes & Needles</li>
-                        <li>Cotton & Gauze</li>
+                        <li>Flat monthly fee</li>
+                        <li>Based on chair count</li>
+                        <li>No surprise charges</li>
                     </ul>
                 </div>
-                <div class="product-category">
-                    <h3>Preventive Care</h3>
+                <div class="value-block">
+                    <h3>Local and Accountable</h3>
                     <ul>
-                        <li>Prophylaxis Paste</li>
-                        <li>Fluoride Products</li>
-                        <li>Sealants</li>
-                        <li>Polishing Supplies</li>
+                        <li>Same route day</li>
+                        <li>Same delivery window</li>
+                        <li>Same local contact</li>
+                        <li>No call centers</li>
                     </ul>
                 </div>
             </div>
         </div>
     </section>
 
-    <!-- Contact Section -->
-    <section id="contact" class="contact">
+    <!-- Who It's For -->
+    <section class="who-its-for">
         <div class="container">
-            <div class="section-header">
-                <h2>Get In Touch</h2>
-                <p>Ready to streamline your supply management? Contact us today</p>
+            <h2>Who It's For</h2>
+            <div class="who-content">
+                <ul>
+                    <li>Privately owned dental practices</li>
+                    <li>3–10 chair offices</li>
+                    <li>Practices that want operations to run quietly</li>
+                </ul>
+                <p class="exclusion-note"><strong>Not designed for hospital systems or DSOs.</strong></p>
             </div>
-            <div class="contact-wrapper">
-                <div class="contact-info">
-                    <div class="contact-item">
-                        <div class="contact-icon">📞</div>
-                        <div>
-                            <h3>Phone</h3>
-                            <p>(555) 123-4567</p>
-                        </div>
-                    </div>
-                    <div class="contact-item">
-                        <div class="contact-icon">✉️</div>
-                        <div>
-                            <h3>Email</h3>
-                            <p>info@morencysupply.com</p>
-                        </div>
-                    </div>
-                    <div class="contact-item">
-                        <div class="contact-icon">📍</div>
-                        <div>
-                            <h3>Address</h3>
-                            <p>123 Dental Supply Way<br>Healthcare District, ST 12345</p>
-                        </div>
-                    </div>
-                    <div class="contact-item">
-                        <div class="contact-icon">🕒</div>
-                        <div>
-                            <h3>Business Hours</h3>
-                            <p>Monday - Friday: 8:00 AM - 6:00 PM<br>Saturday: 9:00 AM - 2:00 PM</p>
-                        </div>
-                    </div>
+        </div>
+    </section>
+
+    <!-- How It Works -->
+    <section id="how-it-works" class="how-it-works">
+        <div class="container">
+            <h2>How It Works</h2>
+            <div class="steps-grid">
+                <div class="step">
+                    <div class="step-number">1</div>
+                    <h3>Set par levels once</h3>
+                    <p>We work with you to establish appropriate inventory levels for your practice.</p>
                 </div>
-                <form class="contact-form" id="contactForm">
-                    <div class="form-group">
-                        <label for="name">Name</label>
-                        <input type="text" id="name" name="name" required>
-                    </div>
-                    <div class="form-group">
-                        <label for="email">Email</label>
-                        <input type="email" id="email" name="email" required>
-                    </div>
-                    <div class="form-group">
-                        <label for="phone">Phone</label>
-                        <input type="tel" id="phone" name="phone">
-                    </div>
-                    <div class="form-group">
-                        <label for="practice">Practice Name</label>
-                        <input type="text" id="practice" name="practice">
-                    </div>
-                    <div class="form-group">
-                        <label for="message">Message</label>
-                        <textarea id="message" name="message" rows="5" required></textarea>
-                    </div>
-                    <button type="submit" class="btn btn-primary">Send Message</button>
-                </form>
+                <div class="step">
+                    <div class="step-number">2</div>
+                    <h3>We restock on a recurring route</h3>
+                    <p>Weekly or bi-weekly deliveries keep your supplies at the right levels.</p>
+                </div>
+                <div class="step">
+                    <div class="step-number">3</div>
+                    <h3>One predictable monthly invoice</h3>
+                    <p>Simple, flat-rate pricing based on your chair count. No surprises.</p>
+                </div>
             </div>
+        </div>
+    </section>
+
+    <!-- Social Proof -->
+    <section class="social-proof">
+        <div class="container">
+            <p class="proof-text">Serving dental practices across east-central Indiana</p>
+        </div>
+    </section>
+
+    <!-- CTA Section -->
+    <section class="cta-section">
+        <div class="container">
+            <h2>Ready to eliminate supply management from your to-do list?</h2>
+            <p>Schedule a 10-minute walkthrough. No obligation.</p>
+            <a href="contact.html" class="btn btn-primary btn-large">Schedule a 10-Minute Walkthrough</a>
         </div>
     </section>
 
@@ -237,38 +150,31 @@
             <div class="footer-content">
                 <div class="footer-section">
                     <h3>Morency Supply</h3>
-                    <p>Your trusted partner for dental consumables management.</p>
+                    <p>Dental consumables, fully managed.</p>
                 </div>
                 <div class="footer-section">
                     <h4>Quick Links</h4>
                     <ul>
-                        <li><a href="#home">Home</a></li>
-                        <li><a href="#services">Services</a></li>
-                        <li><a href="#about">About</a></li>
-                        <li><a href="#products">Products</a></li>
-                        <li><a href="#contact">Contact</a></li>
+                        <li><a href="index.html">Home</a></li>
+                        <li><a href="services.html">Services</a></li>
+                        <li><a href="pricing.html">Pricing</a></li>
+                        <li><a href="why.html">Why Morency</a></li>
+                        <li><a href="faqs.html">FAQs</a></li>
+                        <li><a href="about.html">About</a></li>
+                        <li><a href="contact.html">Contact</a></li>
                     </ul>
                 </div>
                 <div class="footer-section">
-                    <h4>Services</h4>
-                    <ul>
-                        <li><a href="#services">Inventory Management</a></li>
-                        <li><a href="#services">Delivery Services</a></li>
-                        <li><a href="#services">Cost Optimization</a></li>
-                        <li><a href="#services">Analytics</a></li>
-                    </ul>
+                    <h4>Service Area</h4>
+                    <p>East-Central Indiana</p>
                 </div>
                 <div class="footer-section">
-                    <h4>Connect</h4>
-                    <div class="social-links">
-                        <a href="#" aria-label="LinkedIn">LinkedIn</a>
-                        <a href="#" aria-label="Facebook">Facebook</a>
-                        <a href="#" aria-label="Twitter">Twitter</a>
-                    </div>
+                    <h4>Contact</h4>
+                    <p><a href="contact.html">Schedule a Walkthrough</a></p>
                 </div>
             </div>
             <div class="footer-bottom">
-                <p>&copy; 2024 Morency Supply. All rights reserved.</p>
+                <p>&copy; 2024 Morency Supply. All rights reserved. | <a href="#privacy">Privacy Policy</a></p>
             </div>
         </div>
     </footer>
@@ -276,4 +182,3 @@
     <script src="script.js"></script>
 </body>
 </html>
-
