--- a/index.html
+++ b/index.html
@@ -217,50 +217,44 @@
       <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-6">
         <div class="bg-card text-card-foreground rounded-lg border border-border p-6 shadow-sm hover:shadow-md transition-shadow">
           <h3 class="text-xl font-semibold mb-2">Infection Control Supplies</h3>
-          <p class="text-muted-foreground mb-4">
+          <p class="text-muted-foreground">
             Gloves, masks, disinfectants, sterilization pouches, and barrier protection products.
           </p>
-          <a href="#contact" class="block w-full px-4 py-2 border border-border rounded hover:bg-accent hover:text-accent-foreground transition-colors text-center font-medium">Request Catalog</a>
         </div>
 
         <div class="bg-card text-card-foreground rounded-lg border border-border p-6 shadow-sm hover:shadow-md transition-shadow">
           <h3 class="text-xl font-semibold mb-2">Restorative Materials</h3>
-          <p class="text-muted-foreground mb-4">
+          <p class="text-muted-foreground">
             Composite resins, bonding agents, cements, and all materials for restorative procedures.
           </p>
-          <a href="#contact" class="block w-full px-4 py-2 border border-border rounded hover:bg-accent hover:text-accent-foreground transition-colors text-center font-medium">Request Catalog</a>
         </div>
 
         <div class="bg-card text-card-foreground rounded-lg border border-border p-6 shadow-sm hover:shadow-md transition-shadow">
           <h3 class="text-xl font-semibold mb-2">Endodontic Supplies</h3>
-          <p class="text-muted-foreground mb-4">
+          <p class="text-muted-foreground">
             Files, gutta-percha, sealers, and all endodontic treatment essentials.
           </p>
-          <a href="#contact" class="block w-full px-4 py-2 border border-border rounded hover:bg-accent hover:text-accent-foreground transition-colors text-center font-medium">Request Catalog</a>
         </div>
 
         <div class="bg-card text-card-foreground rounded-lg border border-border p-6 shadow-sm hover:shadow-md transition-shadow">
           <h3 class="text-xl font-semibold mb-2">Prosthetic Materials</h3>
-          <p class="text-muted-foreground mb-4">
+          <p class="text-muted-foreground">
             Impression materials, temporary cements, and supplies for prosthetic work.
           </p>
-          <a href="#contact" class="block w-full px-4 py-2 border border-border rounded hover:bg-accent hover:text-accent-foreground transition-colors text-center font-medium">Request Catalog</a>
         </div>
 
         <div class="bg-card text-card-foreground rounded-lg border border-border p-6 shadow-sm hover:shadow-md transition-shadow">
           <h3 class="text-xl font-semibold mb-2">Preventive Care Products</h3>
-          <p class="text-muted-foreground mb-4">
+          <p class="text-muted-foreground">
             Fluoride treatments, sealants, prophylaxis paste, and preventive care essentials.
           </p>
-          <a href="#contact" class="block w-full px-4 py-2 border border-border rounded hover:bg-accent hover:text-accent-foreground transition-colors text-center font-medium">Request Catalog</a>
         </div>
 
         <div class="bg-card text-card-foreground rounded-lg border border-border p-6 shadow-sm hover:shadow-md transition-shadow">
           <h3 class="text-xl font-semibold mb-2">Office Supplies</h3>
-          <p class="text-muted-foreground mb-4">
+          <p class="text-muted-foreground">
             Patient bibs, cups, paper products, and general office consumables.
           </p>
-          <a href="#contact" class="block w-full px-4 py-2 border border-border rounded hover:bg-accent hover:text-accent-foreground transition-colors text-center font-medium">Request Catalog</a>
         </div>
       </div>
     </div>
